--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Title</title>
+<title>baiduditu-api</title>
 <!-- baidu map -->
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <style type="text/css">
